unpackaged/objects/WorkIt2__Activity__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>WorkIt2__Context__c</fullName>
        <label>Context ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkIt2__Object__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activities</label>
</CustomObject>